k8s/testing/deploy-testwebapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web-deployment
  namespace: test-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: test-web-html
---
apiVersion: v1
kind: Service
metadata:
  name: test-web-service
  namespace: test-web
spec:
  selector:
    app: test-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - test-web.corp.camelotlab.xyz
    secretName: wildcardcert
  rules:
  - host:  test-web.corp.camelotlab.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-web-service
            port:
              number: 80
