k8s/testing/ingress-testwebapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  namespace: test-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - test-web.camelotlab.xyz
    secretName: common-resources/nginx-wildcard
  rules:
  - host: test-web.camelotlab.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
